--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "4.9.0",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-action-button": "^2.8.4",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
