--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "expo": "^25.0.0",
     "firebase": "4.9.0",
+    "native-base": "^2.4.1",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-action-button": "^2.8.4",
