--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "expo": "^25.0.0",
     "firebase": "4.9.0",
     "native-base": "^2.4.1",
+    "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-action-button": "^2.8.4",
@@ -13,5 +14,13 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "tcomb-form-native": "^0.6.11"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
