chore(expo): upgrade to 27.0.0

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "expo": "^25.0.0",
+    "expo": "^27.0.0",
     "firebase": "4.9.0",
     "native-base": "^2.4.1",
     "prop-types": "^15.6.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-action-button": "^2.8.4",
     "react-navigation": "^2.0.0-rc.1",
     "react-redux": "^5.0.7",
