--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-action-button": "^2.8.4",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.0-rc.1",
+    "react-navigation-header-buttons": "^0.0.7",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
